Fixed footer content spacing

--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ textarea {
 
   footer {
     text-align: center;
-    flex-direction: column;
+    flex-flow: row wrap;
   }
 
   footer p {
@@ -218,15 +218,14 @@ textarea {
   }
 
   footer .content-wrapper {
-    width: 55%;
+    width: 100%;
     margin: 50px 0;
   }
 
   footer .footer-content {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    justify-content: space-around;
+    }
 
   footer .contact {
     margin-bottom: 50px;
